examples/fail/arith.miniml
let times5 = * 5;;

4 + times5;; 